--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.5",
     "next": "^9.3.1",
+    "next-seo": "^4.4.0",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.3",
