--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.3.0",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.9.5",
     "next": "^9.3.1",
@@ -30,6 +33,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.3",
+    "validator": "^13.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
