--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@svgr/webpack": "^5.3.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
