--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.3.0",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
