--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^9.3.1",
     "next-seo": "^4.4.0",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.3",
