--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.5",
     "next": "^9.3.1",
+    "next-cookies": "^2.0.3",
     "next-seo": "^4.4.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
