Ajout de ant design

--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.3.0",
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^4.1.0",
+    "aws-sdk": "^2.652.0",
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
+    "cloudinary": "^1.21.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -31,13 +36,16 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.9.5",
-    "next": "^9.3.1",
+    "next": "^9.3.4",
     "next-cookies": "^2.0.3",
     "next-seo": "^4.4.0",
     "nprogress": "^0.2.0",
+    "null-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-custom-scroll": "^4.2.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^2.7.0",
     "sass": "^1.26.3",
     "validator": "^13.0.0",
     "winston": "^3.2.1"
