--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 SERVER_PORT=
-MONGO_URI=""
+MONGO_URI=
+SITE_NAME=
+SITE_URL=
+TOKEN_SECRET=
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+NOREPLY_EMAIL=
+CLOUDINARY_URL=
+GOOGLE_ANALYTICS_ID=
