Finalisation de la page d'accueil

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "sass": "^1.26.3",
+    "swr": "^0.2.0",
     "validator": "^13.0.0",
     "winston": "^3.2.1"
   },
