--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass:watch": "sass --watch stylesheets/main.scss:public/css/main.css"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "@svgr/webpack": "^5.3.0",
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.26.15",
