--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
-    "@svgr/webpack": "^5.3.0",
+    "@svgr/webpack": "^5.3.1",
     "@zeit/next-css": "^1.0.1",
-    "antd": "^3.26.15",
-    "aws-sdk": "^2.652.0",
+    "antd": "^4.1.3",
+    "aws-sdk": "^2.656.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bcryptjs": "^2.4.3",
@@ -38,8 +38,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "mongoose": "^5.9.5",
-    "next": "^9.3.4",
+    "mongoose": "^5.9.9",
+    "next": "^9.3.5",
     "next-cookies": "^2.0.3",
     "next-seo": "^4.4.0",
     "nprogress": "^0.2.0",
@@ -49,6 +49,7 @@
     "react-custom-scroll": "^4.2.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-moment": "^0.9.7",
     "sass": "^1.26.3",
     "swr": "^0.2.0",
     "validator": "^13.0.0",
@@ -62,9 +63,9 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "prettier": "^1.19.1"
   }
 }
