--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
+    "@artsy/fresnel": "^1.1.0",
     "@svgr/webpack": "^5.3.1",
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.1.3",
