--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,56 +7,56 @@
   "theme_color": "#17499f",
   "background_color": "#ffffff",
   "icons": [{
-      "src": "images/icons/favicon.ico",
+      "src": "images/favicons/favicon.ico",
       "type": "image/x-icon"
     },
     {
-      "src": "images/icons/16x16.png",
+      "src": "images/favicons/16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "images/icons/24x24.png",
+      "src": "images/favicons/24x24.png",
       "sizes": "24x24",
       "type": "image/png"
     },
     {
-      "src": "images/icons/32x32.png",
+      "src": "images/favicons/32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "images/icons/64x64.png",
+      "src": "images/favicons/64x64.png",
       "sizes": "64x64",
       "type": "image/png"
     },
     {
-      "src": "images/icons/96x96.png",
+      "src": "images/favicons/96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "images/icons/180x180.png",
+      "src": "images/favicons/180x180.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "images/icons/192x192.png",
+      "src": "images/favicons/192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icons/196x196.png",
+      "src": "images/favicons/196x196.png",
       "sizes": "196x196",
       "type": "image/png"
     },
     {
-      "src": "images/icons/228x228.png",
+      "src": "images/favicons/228x228.png",
       "sizes": "228x228",
       "type": "image/png"
     },
     {
-      "src": "images/icons/512x512.png",
+      "src": "images/favicons/512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
