--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-highlight-words": "^0.16.0",
+    "react-lazyload": "^2.6.7",
     "react-moment": "^0.9.7",
     "sass": "^1.26.3",
     "swr": "^0.2.0",
