--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bcryptjs": "^2.4.3",
+    "bizcharts": "^4.0.2",
     "classnames": "^2.2.6",
     "cloudinary": "^1.21.0",
     "compression": "^1.7.4",
@@ -34,6 +35,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "googleapis": "^50.0.0",
     "helmet": "^3.22.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
@@ -56,6 +58,7 @@
     "react-moment": "^0.9.7",
     "sass": "^1.26.3",
     "swr": "^0.2.0",
+    "systeminformation": "^4.25.1",
     "validator": "^13.0.0",
     "winston": "^3.2.1",
     "xlsx": "^0.15.6"
