--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@artsy/fresnel": "^1.1.0",
     "@svgr/webpack": "^5.3.1",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "antd": "^4.2.0",
     "aws-sdk": "^2.672.0",
     "axios": "^0.19.2",
@@ -40,6 +41,9 @@
     "helmet": "^3.22.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "less": "^3.11.1",
+    "less-loader": "^6.1.0",
+    "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "mongoose": "^5.9.12",
